tests/integration_tests/snapshots/main__integration_tests__parsing__empty_text_section.snap
---
source: tests/integration_tests/parsing.rs
expression: "kiss_srt::to_string(&subtitles)"
---
1
00:00:00,000 --> 11:11:11,111


