tests/integration_tests/snapshots/main__integration_tests__parsing__mutations-3.snap
---
source: tests/integration_tests/parsing.rs
expression: "kiss_srt::to_string(&scaled_up)"
---
1
00:00:00,000 --> 00:01:31,801
This is some sample
text

2
00:02:50,023 --> 00:03:17,999
3
00:00:00,000 --> 11:11:11,111
^^ Wow. That looks a lot like a subtitle, but it isn't

