tests/integration_tests/snapshots/main__integration_tests__parsing__mutations-4.snap
---
source: tests/integration_tests/parsing.rs
expression: "kiss_srt::to_string(&removed)"
---
1
00:02:34,567 --> 00:03:00,000
3
00:00:00,000 --> 11:11:11,111
^^ Wow. That looks a lot like a subtitle, but it isn't

